<resources>
    <string name="app_name">YXwuliu</string>
    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="goods_detail">货物详情</string>
    <string name="cars_want">车辆需求</string>
    <string name="remark_info">备注信息</string>
    <string name="start_transport">开始运输</string>
    <string name="order_id">订单号</string>
    <string name="input_price">请输入报价</string>
    <string name="ok">确定</string>
</resources>
